[metadata]
name = flowpeak
version = 1.0.0
author = Lizard
author_email = lizardwine@hotmail.com
description = CLI API
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6 